--- a/esp/services/CMakeLists.txt
+++ b/esp/services/CMakeLists.txt
@@ -55,3 +55,4 @@ else ()
   HPCC_ADD_SUBDIRECTORY (WsDeploy "PLATFORM")
 endif()
 HPCC_ADD_SUBDIRECTORY (ws_logaccess "PLATFORM")
+HPCC_ADD_SUBDIRECTORY (ws_sysinfolog "PLATFORM")
